# rgain3

./: .gitignore  .hgignore  .travis.yml  CHANGES.md  Dockerfile  MANIFEST.in  README  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tests.sh  tox.ini
.github/workflows/: main.yml  publish.yml
man/: collectiongain.rst  replaygain.rst
ql-plugin/: README  replaygain-ui.xml  replaygain.py
rgain/: __init__.py  albumid.py  distutils.py  rgcalc.py  rgio.py  util.py
rgain/script/: __init__.py  collectiongain.py  replaygain.py
rgain3/: __init__.py  albumid.py  collectiongain.py  replaygain.py  rgcalc.py  rgio.py  util.py  version.py
rgain3/lib/: __init__.py  rgcalc.py  rgio.py  util.py  version.py
rgain3/script/: __init__.py  collectiongain.py  replaygain.py
scripts/: collectiongain  replaygain
test/: test_albumid.py  test_collectiongain_script.py  test_rgain_init.py  test_rgcalc.py  test_rgio.py  test_util.py
test/data/: album-tag.flac  albumartist.flac  mb-album-id-and-more.flac  mb-album-id.flac  no-tags.flac
